[gd_scene load_steps=6 format=2]

[ext_resource path="res://Font/appleFonts.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/OperationNoteChatView.gd" type="Script" id=2]
[ext_resource path="res://Icon/UITexture/Icon_PaperPlane.png" type="Texture" id=3]
[ext_resource path="res://Scene/KnowledgeInstruct.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="OperationNoteChatView" type="Node2D"]
script = ExtResource( 2 )

[node name="ChatLabel" type="Label" parent="."]
margin_right = 928.0
margin_bottom = 576.0
custom_fonts/font = SubResource( 1 )
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OpenBtn" type="Button" parent="."]
margin_left = 864.0
margin_top = 472.0
margin_right = 928.0
margin_bottom = 536.0
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="KnowledgeInstruct" parent="." instance=ExtResource( 4 )]
margin_left = 576.0
margin_top = 256.0
margin_right = 1088.0
margin_bottom = 512.0

[connection signal="pressed" from="OpenBtn" to="." method="_on_OpenBtn_pressed"]
